Working CRUD concept for other basic entities with mapstruct binding fix
